--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -11,6 +11,10 @@
     font-weight: normal;
     font-family: $playfair;
     @include font-size(26px,34px);
+    @include mq(tablet) {
+        @include font-size(28px,35px);
+        margin-top: 3.42em;
+    }
 }
 .c-section__title--hr {
     width: 4.87em;
