--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -1,5 +1,4 @@
 .c-section--footer {
-    padding: 50px 0 20px;
     background-image: url(../../images/bg.png);
     background-position: bottom;
 }
@@ -8,8 +7,9 @@
     display: flex;
     flex-direction: column;
     gap: 3em;
+    padding: 0;
     margin-bottom: 5em;
-    max-width: 500px;
+    max-width: 460px;
     @include mq(desktop) {
         max-width: none;
     }
@@ -40,13 +40,14 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-between;
-    padding: 4.66em 0;
+    padding: 4.25em 0;
     border-top: 1px solid #dfdfdf;
     color: #757575;
 
     @include font-size(12px, 14px);
     @include mq(tablet) {
         flex-direction: row;
+        @include font-size(14px, 16.8px);
     }
 }
 
